--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -157,7 +157,7 @@
 </nav>
 
 <div class="content">
-  <h1>Bienvenido al Sistema del Restaurante</h1>
+  <h1>Bienvenido a Rslitchen</h1>
   <p>Selecciona una opción del menú para comenzar</p>
 </div>
 
