Redireccionamiento vistas + back

--- a/src/main/resources/templates/factura.html
+++ b/src/main/resources/templates/factura.html
@@ -455,7 +455,7 @@
 </head>
 <body>
 
-<button class="volver-btn" onclick="location.href='/'">
+<button class="volver-btn" onclick="location.href='/home'">
   <i class="fas fa-arrow-left"></i> Volver
 </button>
 
