--- a/src/main/resources/templates/foro.html
+++ b/src/main/resources/templates/foro.html
@@ -362,7 +362,7 @@
 <body>
 <header>
     <nav>
-        <a href="/"><i class="fas fa-home"></i> Inicio</a>
+        <a href="/home"><i class="fas fa-home"></i> Inicio</a>
 
     </nav>
 </header>
