--- a/src/main/resources/templates/platillos.html
+++ b/src/main/resources/templates/platillos.html
@@ -349,7 +349,7 @@
 </head>
 <body>
 
-<button class="volver-btn" onclick="location.href='/'">Volver</button>
+<button class="volver-btn" onclick="location.href='/home'">Volver</button>
 
 <div class="main-container">
   <h1>Gestión de Platillos</h1>
