--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -157,7 +157,7 @@
 </nav>
 
 <div class="content">
-  <h1>Bienvenido a Rslitchen</h1>
+  <h1>Bienvenido a RsKitchen</h1>
   <p>Selecciona una opción del menú para comenzar</p>
 </div>
 
@@ -166,7 +166,6 @@
     document.body.classList.toggle('dark-mode');
   }
 
-  // Crear partículas decorativas
   for (let i = 0; i < 40; i++) {
     let particle = document.createElement('div');
     particle.className = 'particle';
