--- a/src/main/resources/templates/logis.html
+++ b/src/main/resources/templates/logis.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Iniciar Sesión</title>
@@ -128,10 +128,14 @@
 <div class="login-container">
     <h2>Iniciar Sesión</h2>
     <form action="/login" method="POST">
-        <input type="text" name="username" class="input" placeholder="Usuario" required>
-        <input type="password" name="password" class="input" placeholder="Contraseña" required>
+        <input type="text" name="username" class="input" placeholder="Email" required>
+        <input type="password" name="password" class="input" placeholder="Password" required>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button type="submit" class="login-button">Entrar</button>
     </form>
+    <div th:if="${param.error}" style="color: red; margin-top: 10px;">
+        Usuario o contraseña incorrectos
+    </div>
 </div>
 </body>
 </html>
