--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -152,7 +152,7 @@
     <li><a href="/foro">Foro</a></li>
     <li><a href="/producto">Producto</a></li>
     <li><a href="/facturas">Facturas</a></li>
-    <li><a href="/platillo">Platillo</a></li>
+    <li><a href="/platillos">Platillos</a></li>
   </ul>
 </nav>
 
