--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -88,7 +88,7 @@
 
     .toggle-btn {
       position: fixed;
-      top: 20px;
+      bottom: 20px;
       right: 20px;
       background: #1a1a1a;
       color: white;
@@ -124,7 +124,6 @@
       }
     }
 
-    /* Responsive */
     @media (max-width: 768px) {
       .menu-bar ul li {
         display: block;
@@ -149,10 +148,11 @@
   <ul>
     <li><a href="/mesa">Mesa</a></li>
     <li><a href="/mesero">Mesero</a></li>
+    <li><a href="/pedidos">Pedidos</a></li>
     <li><a href="/foro">Foro</a></li>
     <li><a href="/producto">Producto</a></li>
     <li><a href="/facturas">Facturas</a></li>
-    <li><a href="/platillo">Platillo</a></li>
+    <li><a href="/platillos">Platillo</a></li>
   </ul>
 </nav>
 
