--- a/src/main/resources/templates/mesero.html
+++ b/src/main/resources/templates/mesero.html
@@ -13,7 +13,6 @@
 <h1>Registro de Mesero</h1>
 
 <form th:action="@{/mesero/guardar}" method="post" th:object="${mesero}">
-
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
     <label for="id_mesero">ID del Mesero:</label>
@@ -37,6 +36,26 @@
     <p style="color: green;" th:text="${mensajeExito}"></p>
     <p style="color: red;" th:text="${mensajeError}"></p>
 </div>
+
+<h2>Meseros Registrados</h2>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Correo</th>
+        <th>Rol</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="m : ${meseros}">
+        <td th:text="${m.id_mesero}">ID</td>
+        <td th:text="${m.name}">Nombre</td>
+        <td th:text="${m.mail}">Correo</td>
+        <td th:text="${m.role}">Rol</td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
