--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>Menú Principal</title>
@@ -161,6 +161,10 @@
   <h1>Bienvenido a RsKitchen</h1>
   <p>Selecciona una opción del menú para comenzar</p>
 </div>
+<form th:action="@{/logout}" method="post">
+  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+  <button type="submit">Cerrar Sesión</button>
+</form>
 
 <script>
   function toggleMode() {
